--- a/Map03.html
+++ b/Map03.html
@@ -10,51 +10,112 @@
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyA1_s2SgBaH2YiI8v_s3GubyeTzxpSW2bE"></script>
-
-
+    <style>
+        .carousel-inner>.item>img,
+        .carousel-inner>.item>a>img {
+            width: 100%;
+            margin: auto;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="col-sm-12">
+        <div class="col-sm-6">
+            <div id="googleMap" style="width: 100%; height: 400px; background:yellow"></div>
+        </div>
 
-    <div class="col-sm-6">
-        <div id="googleMap" style="width: 100%; height: 400px; background:yellow"></div>
-    </div>
-
-    <div class="col-sm-6">
-        <div align="center">
-            <!-- Single button -->
-            <div class="btn-group">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <div class="col-sm-6">
+            <div align="center">
+                <img src="img/梧棲店.jpg" style="width: 50%; height: 50%" /><br>
+                <!-- Single button -->
+                <div class="btn-group">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 門市資訊 <span class="caret"></span>
             </button>
-                <ul class="dropdown-menu">
-                    <li><a href="Map01.html">旗艦店</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="Map02.html">逢甲店</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="Map03.html">梧棲店</a></li>
-                    <li role="separator" class="divider"></li>
-                </ul>
-            </div>
+                    <ul class="dropdown-menu">
+                        <li><a href="Map01.html">旗艦店</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="Map02.html">逢甲店</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="Map03.html">梧棲店</a></li>
+                        <li role="separator" class="divider"></li>
+                    </ul>
+                </div>
 
-            <!-- 門市資訊 -->
-            <h3>梧棲店</h3>
-            <p>營業時間 : 24H</p>
-            <p>門市地址 : 台中市梧棲區大智路二段180號</p>
-            <p>訂位電話 : 04-26578811</p>
-            <div class="btn-group btn-group-justified" role="group">
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default"><a href="test01.html">門市價目表</a></button>
+                <!-- 門市資訊 -->
+                <h3>梧棲店</h3>
+                <p>營業時間 : 24H</p>
+                <p>門市地址 : <a href="https://goo.gl/maps/XfWuWzTRYz12">台中市梧棲區大智路二段180號</a></p>
+                <p>訂位電話 : <a href="tel:0426578811">04-26578811</a></p>
+                <div class="btn-group btn-group-justified" role="group">
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default"><a href="test01.html">門市價目表</a></button>
+                    </div>
+                    <div class="btn-group" role="group">
+                        <button type="button" class="btn btn-default">立即定位</button>
+                    </div>
                 </div>
-                <div class="btn-group" role="group">
-                    <button type="button" class="btn btn-default">立即定位</button>
-                </div>
+                <br>
             </div>
-            <br>
-            <img src="img/梧棲店.jpg" style="width: 50%; height: 50%" />
         </div>
     </div>
+    <br>
+    <div class="col-sm-12">
+        <div class="col-sm-3">
+        </div>
 
+        <div class="col-sm-6">
+            <div align="center">
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img src="img/BigRoom1.jpg" alt="梧棲店">
+                            <div class="carousel-caption">
+                                <h3>梧棲店</h3>
+                                <p>大包廂</p>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <img src="img/MidRoom1.jpg" alt="梧棲店">
+                            <div class="carousel-caption">
+                                <h3>梧棲店</h3>
+                                <p>中包廂</p>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <img src="img/SmlRoom1.jpg" alt="梧棲店">
+                            <div class="carousel-caption">
+                                <h3>梧棲店</h3>
+                                <p>小包廂</p>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-sm-3">
+        </div>
+    </div>
 
 
     <script>
